# APOsong

./: .readthedocs.yaml  README.md  aposong.py  aposong.yml  cal.py  control.py  database.py  eShelCalLamps.py  eshel.bat  eshel.py  fitsheader.py  focus.py  guider.py  guiding.py  influx.py  logging.yml  lts.py  mail.py  pyproject.toml  qhy_watchdog.py  reduce.py  remote.bat  remote.py  requirements.txt  resolution.py  robotic.py  snmp.py  spectemps.py  stages.py  status.py  tc300.py  timer.py  usbrelay.py  weather.py  zaber.py
docs/: aposong.txt  conf.py  focus.txt  guider.txt  index.rst  index.txt  installation.txt  reduce.txt  remote.txt  robotic.txt  status.txt
sql/: create_guiders.sql  create_motors.sql  create_obs_request_4.sql  create_obs_request_status_4.sql  create_tel_dome.sql  create_weather_station.sql  db_apo.sql  guider.sql  motors.sql  obs.sql  robotic.sql  tel_dome.sql  weather.sql
webapp/: README.md  app.py  index.html
webapp/templates/: index.html
